# llm-benchmark

./: .gitignore  README.md  main.py  pyproject.toml
configs/: example.toml  llama3_8b.toml
hydra/: hydra_run.py  megatron.py
hydra/conf/: config.yaml
hydra/conf/cluster/: slurm.yaml
hydra/conf/framework/: megatron.yaml
hydra/conf/model/: llama3_70b.yaml  llama3_8b.yaml
llm_benchmark/: .generate_config.py.swp  .reports.py.swp  .runs.py.swp  .squeue.py.swp  generate_config.py  model_config.toml  reports.py  runconfig.py  runs.py  squeue.py  status.py  utils.py
reports/: README.txt
runs/: README.txt
templates/: .config.yaml.swp  .nanotron.sbatch.swp  additional_setup.sh  config.yaml  megatron.sbatch  megatron.yaml  nanotron.sbatch  slurm.toml
