[tool.poetry]
name = "llm-benchmark"
version = "2.0.0"
description = ""
authors = ["Alejandro Hernández Cano <alejandro.hernandezcano@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10.2"
pyyaml = "^6.0.1"
pandas = "^2.2.2"
wandb = "^0.17.0"
hydra-core = "^1.3.2"
plotly = "^5.24.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
